2008-10-08  Mike Gorse  <mgorse@novell.com>

	* Atk/Makefile.am, Atk/ObjectFactory.custom, Atk/glue/Makefile.am,
	  Atk/glue/object_factory.c: Add ObjectFactory.custom and
	  glue/object_factory.c.

2008-10-02  Mike Gorse  <mgorse@novell.com>

	* Atk/Makefile.am, Atk/Hyperlink.custom, Atk/glue/Makefile.am,
	  Atk/glue/hyperlink.c: Add Hyperlink.custom and glue/hyperlink.c.

2008-09-30  Mike Kestner  <mkestner@novell.com>

	* generator/EnumGen.cs:
	* generator/InterfaceGen.cs:
	* generator/StructBase.cs: fix build breakage in prev commit.

2008-09-30  Stephane Delcroix  <sdelcroix@novell.com>

	* generator/CallbackGen.cs:
	* generator/ClassGen.cs:
	* generator/EnumGen.cs:
	* generator/GenBase.cs:
	* generator/InterfaceGen.cs:
	* generator/Method.cs:
	* generator/OpaqueGen.cs:
	* generator/StructBase.cs:
	* generator/ObjectGen: check for the internal attribute
	* generator/Method.cs: check for the accessibility attribute;

2008-09-24  Mike Gorse  <mgorse@novell.com>

	* atk/Atk.metadata: Mark rect in GetRangeExtents as out.

2008-09-24  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: kill the FindTypeInReferences recursive loading
	algorithm and instead do a name-based search through the references
	of loaded assemblies only.  Fixes the original bug #400595 and it
	hopefully will have fewer sideeffects that the recursive loading
	approach.

2008-09-24  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: just fail on location null or empty instead of
	checking the assembly type.  Avoids failures on the ms runtime.

2008-09-23  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: bump svn version after tag.

2008-09-23  Mike Gorse <mgorse@novell.com>

	* atk/Makefile.am: add atk/atk.h to glue_includes.
	* atk/glue/Makefile.am: Compile atk/glue/generated.c.

2008-09-23  Andrés G. Aragoneses  <aaragoneses@novell.com>

	Fixes BNC#384475.
	* atk/Object.custom: Provide a new overload that receives an
	enum instead of an ulong, for a friendlier managed API.
