@@ -258,7 +258,6 @@ sample/valtest/Makefile
 sample/valtest/valtest.exe.config
 sample/opaquetest/Makefile
 sample/opaquetest/opaquetest.exe.config
-sample/cairo-sample.exe.config
 ])
 
 echo "---"
