@@ -1,3 +1,12 @@
+2008-10-09  Mike Kestner  <mkestner@novell.com>
+
+	* configure.in.in: kill dead config.in.
+	* sample/CairoSample.cs: some dispose handling and cleanup.
+	* sample/cairo-sample.exe.config.in: kill, no pinvoke needed now.
+	* sample/GException.cs: GException test sample.
+	* sample/GtkCairo.cs: kill, replaced by Gdk.CairoHelper.Create.
+	* sample/Makefile.am: cleanup.
+
 2008-10-08  Mike Gorse  <mgorse@novell.com>
 
 	* Atk/Makefile.am, Atk/ObjectFactory.custom, Atk/glue/Makefile.am,
